PT-1951 Patient measurements - UI improvements prevent jumping while chart image loads

--- a/components/patient-measurements/resources/src/main/resources/resources/uicomponents/phenotips/measurements.css
+++ b/components/patient-measurements/resources/src/main/resources/resources/uicomponents/phenotips/measurements.css
@@ -44,6 +44,7 @@
 }
 #charts-new .chart-thumbs img {
   display: block;
+  height: 129px;
   margin: 0 auto;
   width: 100px;
 }
